refac(): refactoring basic
